Criado Teste de usuario logado e entidades

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.profiles.active=test
 
 spring.jpa.open-in-view=false
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
+
+security.oauth2.client.client-id=${CLIENT_ID:myclientid}
+security.oauth2.client.client-secret=${CLIENT_SECRET:@myclientsecrect}
+
+jwt.secret=${MY-JWT-SECRET-APP-BDS05}
+jwt.duration=${JWT_DURATION:86400}
